2008-04-16  kitone  <kitone@gna.org>

	* share/glade/dialog-preferences.glade:
	* src/gui/PreferencesUI.cc:
	Update with the new WaveformRenderer.

	* src/we/WaveformRenderer.cc:
	* src/we/WaveformRenderer.h:
	* src/we/WaveformRendererCairo.cc:
	* src/we/WaveformRendererGL.cc:
	Add force_redraw_all.

2008-04-16  kitone  <kitone@gna.org>

	* src/actions/WaveformEditor.cc:
	* src/actions/WaveformEditor.h:
	* src/actions/WaveformRenderer.cc:
	* src/actions/WaveformRenderer.h:
	* src/actions/WaveformRendererCairo.cc:
	* src/actions/WaveformRendererGL.cc:
	Move the files to src/we/

	* src/Makefile.am:
	* src/SubtitleEditorWindow.h:
	* src/actions/WaveformManagement.cc:
	* src/gui/Application.h:
	Update with new locations.

2008-04-15  kitone  <kitone@gna.org>

	* src/gui/GStreamerPlayer.cc:
	* src/gui/GStreamerPlayer.h:
	* src/gui/MPlayer.cc:
	* src/gui/MPlayer.h:
	* src/gui/MenuBar.cc:
	* src/gui/Player.cc:
	* src/gui/Player.h:
	* src/gui/VideoPlayer.cc:
	* src/gui/VideoPlayer.h:
	Remove files.

	* configure.in:
	Add link to lgstpbutils-0.10.

	* share/glade/subtitleeditor.glade:
	Updated with the new VideoPlayer and WaveformEditor.

	* share/menubar.xml:
	Updated with the new video player.

	* src/Makefile.am:
	* src/Player.h:
	* src/SubtitleEditorWindow.h:
	* src/actions/VideoPlayerManagement.cc:
	* src/actions/WaveformEditor.cc:
	* src/actions/WaveformEditor.h:
	* src/actions/WaveformManagement.cc:
	* src/gui/Application.cc:
	* src/gui/Application.h:
	* src/main.cc:
	* src/utility.cc:
	* src/utility.h:
	* src/vp/GStreamerPlayer.cc:
	* src/vp/GStreamerPlayer.h:
	* src/vp/VideoPlayer.cc:
	* src/vp/VideoPlayer.h:
	New files, new video player.

2008-04-15  kitone  <kitone@gna.org>

	* src/Document.cc:
	* src/actions/StyleEditor.h:
	* src/gui/GStreamerPlayer.cc:
	* src/gui/WaveformGeneratorUI.cc:
	Fix #1975 (https://gna.org/support/?1975) Build fails with gcc 4.3
	Patch by Jacek Roszkowski.

2008-04-15  kitone  <kitone@gna.org>

	* src/Style.cc: