@@ -1,3 +1,9 @@
+2008-04-25  kitone  <kitone@gna.org>
+
+	* src/we/WaveformEditor.cc:
+	* src/we/WaveformEditor.h:
+	Add function redraw_renderer.
+
 2008-04-16  kitone  <kitone@gna.org>
 
 	* share/glade/dialog-preferences.glade:
